changed to ge collective

--- a/index.html
+++ b/index.html
@@ -3,18 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jesse Otumba- Jesse Otumba</title>
-    <meta name="description" content="Jesse-Otumba-portfolio" />
-    <meta name="author" content="Tillen" />
+    <title>GE Collective</title>
+    <meta name="description" content="GE Collective - Stories. Design. Motion." />
+    <meta name="author" content="GE Collective" />
     
     <!-- Resource Hints for faster loading -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="dns-prefetch" href="https://www.youtube.com" />
     <link rel="dns-prefetch" href="https://player.vimeo.com" />
 
-    <meta property="og:title" content="Jesse-Otumba-portfolio" />
-    <meta property="og:description" content="Jesse-Otumba-portfolio" />
+    <meta property="og:title" content="GE Collective" />
+    <meta property="og:description" content="Stories. Design. Motion." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="" />
 
@@ -37,4 +41,3 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
-
