made more changes on the overall look

--- a/index.html
+++ b/index.html
@@ -4,21 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GE Collective</title>
-    <meta name="description" content="GE Collective - Stories. Design. Motion." />
-    <meta name="author" content="GE Collective" />
+    <meta name="description" content="GE Collective portfolio" />
+    <meta name="author" content="Tillen" />
     
     <!-- Resource Hints for faster loading -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@300;400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
     <link rel="dns-prefetch" href="https://www.youtube.com" />
     <link rel="dns-prefetch" href="https://player.vimeo.com" />
 
     <meta property="og:title" content="GE Collective" />
-    <meta property="og:description" content="Stories. Design. Motion." />
+    <meta property="og:description" content="GE Collective portfolio" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="" />
 
