updated the about page structure and added more bg images

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GE Collective</title>
-    <meta name="description" content="GE Collective portfolio" />
+    <title>General Exhibit</title>
+    <meta name="description" content="General Exhibit portfolio" />
     <meta name="author" content="Tillen" />
     
     <!-- Resource Hints for faster loading -->
@@ -13,8 +13,8 @@
     <link rel="dns-prefetch" href="https://www.youtube.com" />
     <link rel="dns-prefetch" href="https://player.vimeo.com" />
 
-    <meta property="og:title" content="GE Collective" />
-    <meta property="og:description" content="GE Collective portfolio" />
+    <meta property="og:title" content="General Exhibit" />
+    <meta property="og:description" content="General Exhibit portfolio" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="" />
 
