--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>General Exhibit</title>
     <meta name="description" content="General Exhibit portfolio" />
     <meta name="author" content="Tillen" />
+    <link rel="icon" type="image/png" href="/Contactlogo.png" />
     
     <!-- Resource Hints for faster loading -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
